<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/japanese_yen" />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textAlignment="textEnd"
                        android:textColor="@color/gray"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:text="1,000" />

                    <TextView
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yen_worth" />
                </LinearLayout>

                <TextView
                    android:id="@+id/amount_eth"
                    style="@style/HintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    tools:text="=0.0153 ETH" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="vertical">

                <TextView
                    style="@style/HintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/can_send" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/available_amount"
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="55,149" />

                    <TextView
                        style="@style/HintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yen_worth" />
                </LinearLayout>

                <TextView
                    android:id="@+id/available_amount_description"
                    style="@style/HintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    tools:text="( 55,179 円 - 手数料 30 円 )" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
